# Hotmart-Video-Ripper

./: Cargo.toml  README.md  build.rs
src/: gui.rs  main.rs
